# DogStats

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py  settings.py  utils.py
src/bot/: callback_factories.py  filters.py  logic.py  middleware.py  states.py
src/bot/handlers/: __init__.py  basic.py  roles.py  start.py
src/bot/handlers/animals/: __init__.py  add_animal.py  display_animal.py
src/bot/keyboards/: animals.py  basic.py  roles.py
src/database/: __init__.py  client.py  models.py  repositories.py
