[project]
name = "dogstats"
version = "0.1.0"
description = ""
authors = [
    {name = "JxSol",email = "jxsol.js@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dogstats", from = "src"}]


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"


[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
line_length = 100
multi_line_output = 3
no_lines_before = ["localfolder"]
profile = "black"
skip_gitignore = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
